apps/services/imgproxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imgproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imgproxy
  template:
    metadata:
      labels:
        app: imgproxy
    spec:
      containers:
        - name: imgproxy
          image: darthsim/imgproxy:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "1"
