apps/services/imgproxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imgproxy
spec:
  selector:
    app: imgproxy
  ports:
    - port: 80
      targetPort: 8080
